--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tanstack/query-sync-storage-persister": "^5.90.18",
     "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query-persist-client": "^5.90.18",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +56,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "idb-keyval": "^6.2.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -76,6 +79,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
